--- a/src/views/theme/jianshu/index.pug
+++ b/src/views/theme/jianshu/index.pug
@@ -47,7 +47,7 @@ block body
                                     .views 321
                                     .comments 32
                             .right        
-                                img(src="//upload-images.jianshu.io/upload_images/1980684-96b60de8eda6b749.jpeg?imageMogr2/auto-orient/strip|imageView2/1/w/375/h/300")
+                                img(src=item.poster)
                     -}
                 
                 
