--- a/src/views/theme/jianshu/index.pug
+++ b/src/views/theme/jianshu/index.pug
@@ -47,7 +47,7 @@ block body
                                     .views 321
                                     .comments 32
                             .right        
-                                img(src=item.poster)
+                                img(src=item.poster || "https://i.loli.net/2017/08/05/5985d19e81154.jpg")
                     -}
                 
                 
