--- a/src/assets/scripts/admin/jianshu/template/partials/navs.hbs
+++ b/src/assets/scripts/admin/jianshu/template/partials/navs.hbs
@@ -24,6 +24,10 @@
             <div class="item">
                 <a href="#setting"><i class="fa fa-cog" aria-hidden="true"></i>常规设置</a>
             </div>
+            <div class="item">
+                <a href="#tags"><i class="fa fa-tags" aria-hidden="true"></i>标签设置</a>
+            </div>
+
         </div>
     </nav>
 
