--- a/src/assets/styles/admin/jianshu.scss
+++ b/src/assets/styles/admin/jianshu.scss
@@ -1,4 +1,6 @@
 @import './jianshu/edit.scss';
+@import './jianshu/tags.scss';
+
 
 html{
     height: 100%;
@@ -56,6 +58,8 @@ html{
                 li{
                     height: 28px;
                     font-size: 12px;
+                    display: flex;
+                    align-items: center;
                 }
                 a{
                     margin-left: 20px;
@@ -85,6 +89,12 @@ html{
                 }
                 font-size: 12px;
                 color: #7a7a7a;
+
+                .item{
+                    height: 28px;
+                    align-items: center;
+                    display: flex;
+                }
 
             }
 
