--- a/src/views/theme/jianshu/index.pug
+++ b/src/views/theme/jianshu/index.pug
@@ -25,30 +25,37 @@ block body
                         img(src="//upload.jianshu.io/admin_banners/web_images/3348/e263ab95fde969887a393b62df652dd0847445a1.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/1250/h/540")
                     
             .main-content
-                .list
-                    -for(let item of articles || []){
-                        .item
-                            .left
-                                .info
-                                    a(href="#")
-                                        img(src="//upload.jianshu.io/collections/images/14/6249340_194140034135_2.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/195/h/195")
-                                    .text 这是目录
-                                    .date
-                                        - {
-                                        -    let date = new Date(item.date)
-                                        -    let year = date.getFullYear()
-                                        -    let month = date.getMonth() + 1
-                                        -    let day = date.getDate()
-                                            time #{`${year + _T("year") + month + _T("month") + day + _T("day")}`}
-                                        - }
-                                .title!=item.title
-                                section.content!=item.body
-                                .detail
-                                    .views 321
-                                    .comments 32
-                            .right        
-                                img(src=item.poster || "https://i.loli.net/2017/08/05/5985d19e81154.jpg")
-                    -}
+                .left-wrapper
+                    .tags
+                        -for(let item of categories || []){
+                            a.tag(href="/tag/" + item.title) 
+                                img(src=item.icon)
+                                .text #{item.title}
+                        -}
+                    .list
+                        -for(let item of articles || []){
+                            .item
+                                .left
+                                    .info
+                                        a(href="#")
+                                            img(src="//upload.jianshu.io/collections/images/14/6249340_194140034135_2.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/195/h/195")
+                                        .text 这是目录
+                                        .date
+                                            - {
+                                            -    let date = new Date(item.date)
+                                            -    let year = date.getFullYear()
+                                            -    let month = date.getMonth() + 1
+                                            -    let day = date.getDate()
+                                                time #{`${year + _T("year") + month + _T("month") + day + _T("day")}`}
+                                            - }
+                                    .title!=item.title
+                                    section.content!=item.body
+                                    .detail
+                                        .views 321
+                                        .comments 32
+                                .right        
+                                    img(src=item.poster || "https://i.loli.net/2017/08/05/5985d19e81154.jpg")
+                        -}
                 
                 
                 .right-site
