--- a/src/assets/styles/admin/jianshu.scss
+++ b/src/assets/styles/admin/jianshu.scss
@@ -16,7 +16,7 @@ html{
             margin: 0;
         }
         a:link { text-decoration: none;}
-    　　 a:active { text-decoration:blink}
+    　　 a:active { text-decoration:none}
     　　 a:hover { text-decoration:underline;}
     　　 a:visited { text-decoration: none;}
     }
