--- a/src/assets/styles/theme/jianshu-detail.scss
+++ b/src/assets/styles/theme/jianshu-detail.scss
@@ -76,6 +76,9 @@ body{
             justify-content: center;
             align-items: center;
             margin-bottom: 30px;
+            img{
+                width: 100%;
+            }
         }
     }
 }
