--- a/src/assets/styles/theme/jianshu/index.scss
+++ b/src/assets/styles/theme/jianshu/index.scss
@@ -204,6 +204,26 @@ body{
                 font-size: 14px;
                 color: #969696;
             }
+
+            .lists{
+                .item{
+                    margin-top: 15px;
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    img{
+                        width: 48px;
+                        height: 48px;
+                        margin-right: 10px;
+                    }
+
+                    .title{
+                        font-size: 14px;
+                        color: #333;
+                        overflow: hidden;
+                    }
+                }
+            }
         }
 
     }
