--- a/src/assets/scripts/admin/jianshu/template/partials/navs.hbs
+++ b/src/assets/scripts/admin/jianshu/template/partials/navs.hbs
@@ -27,6 +27,9 @@
             <div class="item">
                 <a href="#tags"><i class="fa fa-tags" aria-hidden="true"></i>标签设置</a>
             </div>
+            <div class="item">
+                <a href="#banner"><i class="fa fa-picture-o" aria-hidden="true"></i>横幅设置</a>
+            </div>
 
         </div>
     </nav>
